fix: fix Java 8 compatibility issues in treehole module